[package]
name = "rhyme_dictionary"
version = "0.0.2"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "A Rhyme Dictionary with an MIT LICENSE"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rhyme_dictionary"
keywords = ["natural","language","rhyme","dictionary","IPA"]

[dependencies]
error-chain = "0.12"
reqwest = "0.10"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[[bin]]
name = "download"
path = "src/bin_download.rs"

[[bin]]
name = "compile"
path = "src/bin_compile.rs"

[[bin]]
name = "lookup"
path = "src/bin_lookup.rs"
